Fix background colors

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 </section>
 
 
-<section class="hero is-light is-small">
+<section class="hero is-small">
   <div class="hero-body">
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel" data-slides-to-show="1">
@@ -165,7 +165,7 @@
 </section>
 
 
-<section class="hero is-light is-small">
+<section class="hero is-small">
   <div class="hero-body">
       <div class="container is-max-desktop is-centered has-text-centered">
       <h2 class="title is-3">Semantic Leakage</h2>
@@ -215,7 +215,7 @@
 </section>
 
 
-<section class="hero is-light is-small">
+<section class="hero is-small">
   <div class="hero-body">
       <div class="container is-max-desktop is-centered has-text-centered">
       <h2 class="title is-3">How does it work?</h2>
