Rearranged the Semantic Leakage section

--- a/index.html
+++ b/index.html
@@ -167,7 +167,6 @@
   <div class="hero-body">
       <div class="container is-max-desktop is-centered has-text-centered">
       <h2 class="title is-3">Semantic Leakage</h2>
-          <img class="my-image" src="static/images/semantic_leakage.png" style="width:400px; height:auto;">
           <div class="content has-text-justified">
             <p>
 		We focus our analysis on semantically similar subjects, like a ''kitten'' and a ''puppy''.
@@ -178,6 +177,9 @@
 		Q[<b>x</b><sub>1</sub>] and Q[<b>x</b><sub>2</sub>], will be similar and hence also their attention responses.
 		This, in turn, implies that they will share semantic information from the attention layers, a phenomenon we refer to as <em>semantic leakage</em>.
             </p>
+          </div>
+          <img class="my-image" src="static/images/semantic_leakage.png" style="width:400px; height:auto;">
+          <div class="content has-text-justified">
             <p>
 		Here, We demonstrate the emergence of semantic leakage at the cross-attention layers.
 		We show two examples: a puppy a kitten, and a hamster and a squirrel.
