--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <img src="static/images/teaser.png">
+      <img src="static/images/teaser.jpg">
       <h2 class="subtitle has-text-centered">
 	Introducing <b>Bounded Attention</b>, a training-free technique for regulating the accurate generation of multi-subject images.
       </h2>
@@ -116,15 +116,15 @@
   <div class="hero-body">
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel" data-slides-to-show="1">
-          <img src="static/images/xl_results/0.png">
-          <img src="static/images/xl_results/1.png">
-          <img src="static/images/xl_results/2.png">
-          <img src="static/images/xl_results/3.png">
-          <img src="static/images/xl_results/4.png">
-          <img src="static/images/xl_results/5.png">
-          <img src="static/images/xl_results/6.png">
-          <img src="static/images/xl_results/7.png">
-          <img src="static/images/xl_results/8.png">
+          <img src="static/images/xl_results/0.jpg">
+          <img src="static/images/xl_results/1.jpg">
+          <img src="static/images/xl_results/2.jpg">
+          <img src="static/images/xl_results/3.jpg">
+          <img src="static/images/xl_results/4.jpg">
+          <img src="static/images/xl_results/5.jpg">
+          <img src="static/images/xl_results/6.jpg">
+          <img src="static/images/xl_results/7.jpg">
+          <img src="static/images/xl_results/8.jpg">
       </div>
     </div>
   </div>
