--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 	Introducing <b>Bounded Attention</b>, a training-free technique for regulating the accurate generation of multi-subject images.
       </h2>
       <h3 class="subtitle has-text-centered">
-	We uncover that misalignments between prompts and images primarily stem from semantic leakage in both cross and self-attention layers.
-	Bounded Attention combats this by empowering each subject to <b>''be yourself''</b>, prioritizing individuality and minimizing external influence from other subjects within the image.
+	We uncover that misalignments between prompts and images primarily stem from semantic leakage in both the cross and self-attention layers.
+	Bounded Attention combats this by empowering each subject to <b>''be yourself''</b>, prioritizing individuality and minimizing influence from other subjects within the image.
       </h3>
     </div>
   </div>
