Added a link to the paper

--- a/index.html
+++ b/index.html
@@ -75,10 +75,13 @@
           <div class="column has-text-centered">
             <div class="publication-links">
               <span class="link-block">
+                <a href="https://arxiv.org/abs/2403.16990"
+                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
                   </span>
-                  <span>arXiv (coming soon!)</span>
+                  <span>arXiv</span>
+                </a>
               </span>
               <!-- Code Link. -->
               <span class="link-block">
