--- a/index.html
+++ b/index.html
@@ -269,6 +269,22 @@
 </section>
 
 
+<section class="section is-light" id="BibTeX">
+  <div class="container is-max-desktop content">
+    <h2 class="title">BibTeX</h2>
+    <pre><code>
+      @misc{dahary2024yourself,
+        title={Be Yourself: Bounded Attention for Multi-Subject Text-to-Image Generation},
+        author={Omer Dahary and Or Patashnik and Kfir Aberman and Daniel Cohen-Or},
+        year={2024},
+        eprint={2403.16990},
+        archivePrefix={arXiv},
+        primaryClass={cs.CV}
+      }
+    </code></pre>
+  </div>
+</section>
+
 
 <footer class="footer">
   <div class="container">
