--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 	Introducing <b>Bounded Attention</b>, a training-free technique for regulating the accurate generation of multi-subject images.
       </h2>
       <h3 class="subtitle has-text-centered">
-	We uncover that misalignments between prompts and images primarily stem from semantic leakage in both the cross and self-attention layers.
+	We uncover that misalignments between layouts and images primarily stem from semantic leakage in both the cross and self-attention layers.
 	Bounded Attention combats this by empowering each subject to <b>''be yourself''</b>, prioritizing individuality and minimizing influence from other subjects within the image.
       </h3>
     </div>
