--- a/index.html
+++ b/index.html
@@ -85,10 +85,23 @@
               </span>
               <!-- Code Link. -->
               <span class="link-block">
+                <a href="https://github.com/omer11a/bounded-attention"
+                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code (coming soon!)</span>
+                  <span>Code</span>
+                </a>
+              </span>
+              <!-- Demo Link. -->
+              <span class="link-block">
+                <a href="https://huggingface.co/spaces/omer11a/bounded-attention"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fas fa-laptop"></i>
+                  </span>
+                  <span>Demo</span>
+                </a>
               </span>
             </div>
 
