--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
           <br>
           <div>
-            <h1 class="title"></h1>
+            <h1 class="title">ECCV 2024</h1>
           </div>
           <br>
 
