--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <h1 class="title is-1 publication-title">Be Yourself: Bounded Attention for Multi-Subject Text-to-Image Generation</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://omer11a.github.io/">Omer Dahary</a><sup>1</sup>&nbsp
+              <a href="https://scholar.google.com/citations?user=D1tKZR0AAAAJ&hl=iw&oi=ao/">Omer Dahary</a><sup>1</sup>&nbsp
             </span>
             <span class="author-block">
               <a href="https://orpatashnik.github.io/">Or Patashnik</a><sup>1,2</sup>&nbsp
